<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PlainApp</string>
    <string name="vpn_web_conflict_warning">Your VPN is currently enabled on your device, which could potentially lead to web connection issues when accessed from PC. To resolve this, we recommend adjusting your VPN settings to allow LAN traffic or disabling your VPN.</string>
    <string name="warning">Warning</string>
    <string name="ssl_certificate_reset">SSL certificate is reset</string>
    <string name="the_token_is_reset">The token is reset</string>
    <string name="reset_ssl_certificate">Reset SSL certificate</string>
    <string name="device_name">Device name</string>
    <string name="developer_mode">Developer mode</string>
    <string name="title">Title</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="change_playback_speed">Change playback speed</string>
    <string name="toggle_audio">Toggle audio</string>
    <string name="picture_in_picture">Picture in picture</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="video_save_to">Video saved to {{path}}</string>
    <string name="video_save_to_failed">Failed to save video</string>
    <string name="description">Description</string>
    <string name="duration">Duration</string>
    <string name="bitrate">Bitrate</string>
    <string name="flash_fired">Fired</string>
    <string name="flash_return_light_not_detected">Strobe return light not detected</string>
    <string name="flash_return_light_detected">Strobe return light detected</string>
    <string name="flash_mode_compulsory_firing">Compulsory firing</string>
    <string name="flash_mode_compulsory_suppression">Compulsory suppression</string>
    <string name="flash_mode_auto">Auto</string>
    <string name="flash_no_flash_function">No flash function</string>
    <string name="flash_red_eye_supported">Red-eye supported</string>
    <string name="device_make">Device make</string>
    <string name="device_model">Device model</string>
    <string name="color_space">Color space</string>
    <string name="color_profile">Color profile</string>
    <string name="aperture_value">Aperture value</string>
    <string name="exposure_time">Exposure time</string>
    <string name="focal_length">Focal length</string>
    <string name="iso_speed">ISO speed</string>
    <string name="flash">Flash</string>
    <string name="f_number">F number</string>
    <string name="white_balance">White balance</string>
    <string name="metering_mode">Metering mode</string>
    <string name="exposure_program">Exposure program</string>
    <string name="creator">Creator</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exposure_program_manual">Manual</string>
    <string name="exposure_program_normal">Normal</string>
    <string name="exposure_program_aperture_priority">Aperture priority</string>
    <string name="exposure_program_shutter_priority">Shutter priority</string>
    <string name="exposure_program_creative">Creative</string>
    <string name="exposure_program_action">Action</string>
    <string name="exposure_program_portrait">Portrait</string>
    <string name="exposure_program_landscape">Landscape</string>
    <string name="metering_mode_average">Average</string>
    <string name="metering_mode_center_weight_average">Center weighted average</string>
    <string name="metering_mode_spot">Spot</string>
    <string name="metering_mode_multi_spot">Multi Spot</string>
    <string name="metering_mode_partial">Partial</string>
    <string name="metering_mode_pattern">Pattern</string>
    <string name="metering_mode_other">Other</string>
    <string name="white_balance_auto">Auto</string>
    <string name="white_balance_manual">Manual</string>
    <string name="cells_per_row">Cells per row</string>
    <string name="exit_cast_mode">Exit cast mode</string>
    <string name="rotate">Rotate</string>
    <string name="image_save_to">Image saved to {{path}}</string>
    <string name="image_save_to_failed">Failed to save image</string>
    <string name="resolution">Resolution</string>
    <string name="dimensions">Dimensions</string>
    <string name="select_a_device">Select a device</string>
    <string name="taken_at">Taken at</string>
    <string name="published_at">Published at</string>
    <string name="older_than_7days_feed_items">Older than 7 days</string>
    <string name="older_than_30days_feed_items">Older than 30 days</string>
    <string name="feed_items_cleared">Feed items cleared!</string>
    <string name="clear_feed_items">Clear feed items</string>
    <string name="jump_to_top">Jump to top</string>
    <string name="jump_to_bottom">Jump to bottom</string>
    <string name="save_to_notes">Save to notes</string>
    <string name="confirm_to_send_files_to_file_assistant">Would you like to send these files to the File Transfer Assistant?</string>
    <string name="confirm_to_send_file_to_file_assistant">Would you like to send this files to the File Transfer Assistant?</string>
    <string name="today">Today</string>
    <string name="open_in_web">Open in web browser</string>
    <string name="require_password">Require password</string>
    <string name="two_factor_auth_tips">When logging in on the webpage, we\'ll display a confirmation popup in the app for added security.</string>
    <string name="load_full_content">Load full content</string>
    <string name="auto_fetch_full_content">Auto-fetch Full Content</string>
    <string name="auto_fetch_full_content_tips">When this option is turned on, the app will automatically fetch the complete content of each RSS feed item.</string>
    <string name="invalid_url">Invalid URL format. Example: https://www.example.com</string>
    <string name="local_cache">Local cache</string>
    <string name="clear_cache">Clear cache</string>
    <string name="local_cache_cleared">Local cache cleared.</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="pick_color">Pick color</string>
    <string name="checking_updates">Checking for updates…</string>
    <string name="rate_limit">The request rate is limited</string>
    <string name="check_failure">Failed to check for updates</string>
    <string name="check_update">Check for updates</string>
    <string name="is_latest_version">This is the latest version of the app</string>
    <string name="change_log">Changelog</string>
    <string name="update">Update</string>
    <string name="get_new_updates">Found update for %1$s!</string>
    <string name="get_new_updates_desc">Upgrade now, experience new features!</string>
    <string name="skip_this_version">Skip This Version</string>
    <string name="close">Close</string>
    <string name="timeago_now">just now</string>
    <string name="timeago_oneminute_past">1 minute ago</string>
    <string name="timeago_xminutes_past">%1\$s minutes ago</string>
    <string name="timeago_aboutanhour_past">about an hour ago</string>
    <string name="timeago_xhours_past">%1\$s hours ago</string>
    <string name="timeago_oneday_past">yesterday</string>
    <string name="timeago_xdays_past">%1\$s days ago</string>
    <string name="timeago_oneweek_past">a week ago</string>
    <string name="timeago_xweeks_past">%1\$s weeks ago</string>
    <string name="timeago_aboutamonth_past">about a month ago</string>
    <string name="timeago_xmonths_past">%1\$s months ago</string>
    <string name="timeago_aboutayear_past">about a year ago</string>
    <string name="timeago_overayear_past">over a year ago</string>
    <string name="timeago_almosttwoyears_past">almost two years ago</string>
    <string name="timeago_xyears_past">%1\$s years ago</string>
    <string name="timeago_oneminute_future">within one minute</string>
    <string name="timeago_xminutes_future">within %1\$s minutes</string>
    <string name="timeago_aboutanhour_future">within about an hour</string>
    <string name="timeago_xhours_future">within %1\$s hours</string>
    <string name="timeago_oneday_future">tomorrow</string>
    <string name="timeago_xdays_future">within %1\$s days</string>
    <string name="timeago_oneweek_future">within one week</string>
    <string name="timeago_xweeks_future">within %1\$s weeks</string>
    <string name="timeago_aboutamonth_future">within about a month</string>
    <string name="timeago_xmonths_future">within %1\$s months</string>
    <string name="timeago_aboutayear_future">within about a year</string>
    <string name="timeago_overayear_future">within over a year</string>
    <string name="timeago_almosttwoyears_future">within almost two years</string>
    <string name="timeago_xyears_future">within %1\$s years</string>
    <string name="pin">Pin</string>
    <string name="docs">Docs</string>
    <string name="no_results_found">No results found</string>
    <string name="search">Search</string>
    <string name="attention">Attention</string>
    <string name="password">Password</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="sort">Sort</string>
    <string name="backup_restore">Backup &amp; restore</string>
    <string name="backup">Backup</string>
    <string name="name_asc">Name (A to Z)</string>
    <string name="name_desc">Name (Z to A)</string>
    <string name="ip_address_asc">IP address (0 to 9)</string>
    <string name="last_active_desc">Last active</string>
    <string name="clear_logs">Clear logs</string>
    <string name="share_logs">Share logs</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="rename">Rename</string>
    <string name="create_route">Create route</string>
    <string name="create_vocabulary">Create vocabulary</string>
    <string name="all_devices">All devices</string>
    <string name="apply_to">Apply to</string>
    <string name="field_notes">Notes</string>
    <string name="done">Done</string>
    <string name="select_a_target">Please select a target</string>
    <string name="select_a_interface">Please select a interface</string>
    <string name="route_via">Route via</string>
    <string name="wifi">Wi-Fi</string>
    <string name="enable">Enable</string>
    <string name="hide_ssid">Hide network</string>
    <string name="traffic_to">Traffic to</string>
    <string name="template">Template</string>
    <string name="select_a_template">Select a template</string>
    <string name="cast">Cast</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_tags">Add to tags</string>
    <string name="select_all">Select all</string>
    <string name="delete_files">Delete files</string>
    <string name="remove_from_tags">Remove from tags</string>
    <string name="share">Share</string>
    <string name="cut">Cut</string>
    <string name="show_hidden_files">Show hidden files</string>
    <string name="newest_date_first">Newest date first</string>
    <string name="oldest_date_first">Oldest date first</string>
    <string name="largest_first">Largest first</string>
    <string name="smallest_first">Smallest first</string>
    <string name="create">Create</string>
    <string name="folder">Folder</string>
    <string name="file">File</string>
    <string name="compress">Compress</string>
    <string name="decompress">Decompress</string>
    <string name="insert_image">Insert image</string>
    <string name="image_url">Image URL</string>
    <string name="image_description">Image description</string>
    <string name="width">Width</string>
    <string name="browse">Browse</string>
    <string name="move_to_trash">Move to trash</string>
    <string name="scan_qrcode">Scan QR code</string>
    <string name="sync_data_from_box">Sync data from box</string>
    <string name="logs">Logs</string>
    <string name="keep_screen_on">Keep screen on</string>
</resources>