<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title=""
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more_vert"
        android:title=""
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction">
        <menu>

            <item
                android:id="@+id/create"
                android:title="@string/create"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/create_folder"
                        android:title="@string/folder"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/create_file"
                        android:title="@string/file"
                        app:showAsAction="never" />
                </menu>
            </item>

            <item
                android:id="@+id/show_hidden"
                android:checkable="true"
                android:title="@string/show_hidden_files"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort"
                android:title="@string/sort"
                app:showAsAction="never">

                <menu>
                    <item
                        android:id="@+id/sort_newest_first"
                        android:title="@string/newest_date_first"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/sort_oldest_first"
                        android:title="@string/oldest_date_first"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/sort_largest_first"
                        android:title="@string/largest_first"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/sort_smallest_first"
                        android:title="@string/smallest_first"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/sort_name_asc"
                        android:title="@string/name_asc"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/sort_name_desc"
                        android:title="@string/name_desc"
                        app:showAsAction="never" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/select_all"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="collapseActionView|always|withText"
        tools:ignore="AlwaysShowAction" />
</menu>
