<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Column">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_app_bar"
        style="@style/TopAppBar.BottomSheet"
        app:title="@string/create_route" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/Column">

            <com.ismartcoding.plain.ui.views.ListItemView
                android:id="@+id/target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isRequired="true"
                app:keyText="@string/traffic_to"
                app:requiredErrorText="@string/select_a_target" />

            <com.ismartcoding.plain.ui.views.ListItemView
                android:id="@+id/if_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isRequired="true"
                app:keyText="@string/route_via"
                app:requiredErrorText="@string/select_a_interface" />

            <com.ismartcoding.plain.ui.views.ListItemView
                android:id="@+id/apply_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:keyText="@string/apply_to"
                app:showMore="true"
                app:valueText="@string/all_devices" />

            <com.ismartcoding.plain.ui.views.TextInputView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_normal"
                android:layout_marginTop="@dimen/size_normal"
                app:lines="2"
                app:hint="@string/field_notes" />

            <com.ismartcoding.plain.ui.views.LoadingButtonView
                android:id="@+id/button"
                style="@style/SaveButton" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>
