<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/cast"
        android:icon="@drawable/ic_airplay"
        android:title="@string/cast"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/add_to_playlist"
        android:icon="@drawable/ic_playlist_add"
        android:title="@string/add_to_playlist"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/add_to_tags"
        android:icon="@drawable/ic_add_tag"
        android:title="@string/add_to_tags"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/remove_from_tag"
        android:icon="@drawable/ic_remove_tag"
        android:title="@string/remove_from_tags"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_files"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

</menu>
