<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/cut"
        android:icon="@drawable/ic_cut"
        android:title="@string/cut"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/rename"
        android:icon="@drawable/ic_rename"
        android:title="@string/rename"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/compress"
        android:icon="@drawable/ic_compress"
        android:title="@string/compress"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/decompress"
        android:icon="@drawable/ic_expand"
        android:title="@string/decompress"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_files"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

</menu>
