<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/add_to_tags"
        android:icon="@drawable/ic_add_tag"
        android:title="@string/add_to_tags"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/remove_from_tag"
        android:icon="@drawable/ic_remove_tag"
        android:title="@string/remove_from_tags"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/trash"
        android:icon="@drawable/ic_trash"
        android:title="@string/move_to_trash"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/restore"
        android:icon="@drawable/ic_restore"
        android:title="@string/restore"
        android:visible="false"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

</menu>