<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Column"
    android:paddingBottom="@dimen/size_normal">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_app_bar"
        style="@style/TopAppBar.BottomSheet"
        app:title="@string/insert_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_normal">

        <com.ismartcoding.plain.ui.views.TextInputView
            android:id="@+id/url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_sm"
            app:endIconDrawable="@drawable/ic_more_horiz"
            app:hint="@string/image_url"
            app:layout_constraintEnd_toStartOf="@id/browse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/browse"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginTop="2dp"
            android:text="@string/browse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.ismartcoding.plain.ui.views.TextInputView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_normal"
        android:layout_marginTop="@dimen/size_normal"
        app:hint="@string/image_description" />

    <com.ismartcoding.plain.ui.views.TextInputView
        android:id="@+id/width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_normal"
        android:layout_marginTop="@dimen/size_normal"
        app:hint="@string/width" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Button.BottomSheet"
        android:text="@string/done" />

</LinearLayout>
