<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title=""
        android:tooltipText="@string/sync_data_from_box"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/web"
        android:icon="@drawable/ic_pc"
        android:title=""
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more_vert"
        android:title=""
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/keep_screen_on"
                android:checkable="true"
                android:title="@string/keep_screen_on"
                app:showAsAction="never" />

            <item
                android:id="@+id/scan"
                android:title="@string/scan_qrcode"
                tools:ignore="AlwaysShowAction" />

            <item
                android:id="@+id/settings"
                android:title="@string/settings"
                tools:ignore="AlwaysShowAction" />
        </menu>
    </item>
</menu>
