<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Column">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_app_bar"
        style="@style/TopAppBar.BottomSheet"
        app:title="@string/create_vocabulary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/Column">

            <com.ismartcoding.plain.ui.views.TextInputView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_normal"
                app:hint="@string/name"
                app:isRequired="true" />

            <com.ismartcoding.plain.ui.views.ListItemView
                android:id="@+id/template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isRequired="true"
                app:keyText="@string/template"
                app:requiredErrorText="@string/select_a_template"
                app:showMore="true" />

            <com.ismartcoding.plain.ui.views.LoadingButtonView
                android:id="@+id/button2"
                style="@style/SaveButton" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>
