<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title=""
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title=""
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/sort_name_asc"
                android:orderInCategory="0"
                android:title="@string/name_asc"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_name_desc"
                android:orderInCategory="1"
                android:title="@string/name_desc"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_ip_address"
                android:orderInCategory="2"
                android:title="@string/ip_address_asc"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_last_active_desc"
                android:orderInCategory="3"
                android:title="@string/last_active_desc"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>
