<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title=""
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_menu"
        android:title=""
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/select_more"
        android:icon="@drawable/ic_more_vert"
        android:title=""
        android:visible="false"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/select_all"
                android:title="@string/select_all"
                app:showAsAction="never" />

            <item
                android:id="@+id/add_to_tags"
                android:title="@string/add_to_tags"
                app:showAsAction="never" />
            <item
                android:id="@+id/remove_from_tag"
                android:title="@string/remove_from_tags"
                app:showAsAction="never" />

            <item
                android:id="@+id/delete"
                android:title="@string/delete"
                app:showAsAction="never" />

        </menu>
    </item>

</menu>
