<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Column">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_app_bar"
        style="@style/TopAppBar.BottomSheet"
        app:title="@string/backup_restore" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backup"
        style="@style/Button"
        android:layout_marginHorizontal="@dimen/size_normal"
        android:text="@string/backup" />

    <TextView
        style="@style/Tips.Bottom"
        android:layout_marginHorizontal="@dimen/size_lg"
        android:text="@string/backup_tips" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/restore"
        style="@style/Button.BottomSheet"
        android:layout_marginTop="@dimen/size_normal"
        android:text="@string/restore" />

</LinearLayout>
