<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Column">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_app_bar"
        style="@style/TopAppBar.BottomSheet"
        app:title="@string/wifi" />

    <com.ismartcoding.lib.brv.PageRefreshLayout
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView style="@style/Column">

            <LinearLayout
                android:id="@+id/container"
                style="@style/Column">

                <com.ismartcoding.plain.ui.views.ListItemView
                    android:id="@+id/enable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:keyText="@string/enable" />

                <com.ismartcoding.plain.ui.views.TextInputView
                    android:id="@+id/ssid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/size_normal"
                    android:layout_marginTop="@dimen/size_sm"
                    app:hint="@string/name"
                    app:isRequired="true" />

                <com.ismartcoding.plain.ui.views.TextInputView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/size_normal"
                    android:layout_marginTop="@dimen/size_sm"
                    android:inputType="textPassword"
                    app:endIconMode="password_toggle"
                    app:hint="@string/password"
                    app:isRequired="true" />

                <com.ismartcoding.plain.ui.views.ListItemView
                    android:id="@+id/hide_ssid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_sm"
                    app:keyText="@string/hide_ssid" />

                <com.ismartcoding.plain.ui.views.LoadingButtonView
                    android:id="@+id/button"
                    style="@style/SaveButton" />
            </LinearLayout>
        </ScrollView>
    </com.ismartcoding.lib.brv.PageRefreshLayout>
</LinearLayout>
